<resources>
    <string name="app_name">Mi Ejemplo con Firebase</string>
    <string name="id_value">Identificador</string>
    <string name="name_value">Nombre</string>
    <string name="damage_value">Daño</string>
    <string name="cost_value">Precio</string>
    <string name="button_load">Cargar</string>
    <string name="button_save">Guardar</string>
    <string name="id_hint">Ingrese el número del id</string>
    <string name="name_hint">Nombre del arma</string>
    <string name="damage_hint">Daño del arma</string>
    <string name="cost_hint">Precio del arma</string>
</resources>